continued progresson matrix extension

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 @font-face{
     font-family: 'matrix font';
-    src: url('https://github.com/ssg/ssgmatrix/blob/master/Matrix%20Code%20Font.ttf');
+    src: url('Matrix Code Font.ttf');
     font-style: normal;
     font-weight: 100;
 }
